# buildxl_demos

./: CMakeLists.txt  README.md  config.bc
NinjaHelloWorld/: CMakeCache.txt  CMakeLists.txt  Example.ilk  README.md  build.bat  build.ninja  cmake_install.cmake  config.bc  gen_ninja.bat
